--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,8 +1,8 @@
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
+title:               kevin s chen
+tagline:             'test'
 description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 https://lanyon.getpoole.com
+url:                 https://kevinsunchen.github.io
 baseurl:             ''
 paginate:            5
 permalink:           pretty
