--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,8 +2,7 @@
 title:               kevin s chen
 tagline:             'test'
 description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 https://kevinsunchen.github.io
-baseurl:             ''
+baseurl:             'http://kevinsunchen.github.io/docs/'
 paginate:            5
 permalink:           pretty
 
