--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,20 +1,19 @@
 # Setup
 title:               kevin s chen
-tagline:             'a blog?'
-description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+tagline:             'ramblings'
+description:         'kevin chen<br>mit eecs 23<br>kschen at mit dot edu<br>thought bubbles & baubles'
 paginate:            5
 permalink:           pretty
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              kevin chen
+  url:               https://twitter.com/kechens_
+  email:             kschen@mit.edu
 
 # Gems
 plugins:
   - jekyll-paginate
 
 # Custom vars
-version:             1.1.0
 google_analytics_id: UA-146052-15
