a bunch of changes

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,8 @@
 # Setup
 title:               kevin s chen
-tagline:             ' thought baubles'
-description:         'kevin chen<br>mit eecs 23<br>kschen at mit dot edu<br>thought bubbles & baubles'
+tagline:             'thought baubles'
+masthead:            /assets/images/sun.png
+description:         'kevin <img class="inline-img" src="/assets/images/sun.png"> chen<br>mit eecs 23<br>kschen at mit dot edu<br>thought bubbles & baubles'
 paginate:            5
 permalink:           pretty
 github:
