--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -11,7 +11,7 @@ github:
 # About/contact
 author:
   name:              kevin chen
-  url:               https://twitter.com/kechens_
+  url:               https://twitter.com/kevinsunchen
   email:             kschen@mit.edu
 
 # Gems
