more updates to about page

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,6 +18,8 @@ author:
 # Biographical Info
 bioinfo:
   currentlocation: Cambridge, MA
+  studentstatus: 3rd-year undergrad
+  major: Course 6-2 (Electrical Engineering & Computer Science)
 
 # Gems
 plugins:
